@@ -1460,9 +1460,13 @@ See variable docstring."
 ;;;###autoload
 (defalias 'turn-on-haskell-doc-mode 'haskell-doc-mode)
 
-;;@cindex  turn-off-haskell-doc-mode
+;;;###autoload
+(defalias 'turn-on-haskell-doc 'haskell-doc-mode)
 
-(defun turn-off-haskell-doc-mode ()
+;;@cindex  turn-off-haskell-doc-mode
+(defalias 'turn-off-haskell-doc-mode 'turn-off-haskell-doc)
+
+(defun turn-off-haskell-doc ()
   "Unequivocally turn off `haskell-doc-mode' (which see)."
   (haskell-doc-mode 0))
 
